--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1161,10 +1161,10 @@
             </div>
         </div>
 
-        <!-- 運動紀錄區域 -->
+        <!-- 運動紀錄區域：新增運動紀錄 -->
         <div class="exercise-container" style="padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #ffffff; margin-top:20px;">
             <div style="display:flex; align-items:center; justify-content: space-between;">
-                <h3 style="margin:0;">運動紀錄</h3>
+                <h3 style="margin:0;">新增運動紀錄</h3>
             </div>
 
             <!-- 運動表單：種類/強度/時間（分鐘）/日期時間 -->
@@ -1194,7 +1194,15 @@
                 <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-bottom:10px;">
                     <div>
                         <label for="exDuration">時間（分鐘）</label>
-                        <input type="number" id="exDuration" name="exDuration" min="5" max="240" step="5" value="30" required style="width:100%; padding:8px; border:1px solid #ccc; border-radius:4px;" />
+                        <div>
+                            <div style="margin-bottom:8px; display:flex; gap:8px; flex-wrap:wrap;">
+                                <button type="button" class="exDurBtn" data-min="15" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">15 分鐘</button>
+                                <button type="button" class="exDurBtn" data-min="30" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">30 分鐘</button>
+                                <button type="button" class="exDurBtn" data-min="45" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">45 分鐘</button>
+                                <button type="button" class="exDurBtn" data-min="60" style="padding:6px 10px; border:1px solid #ced4da; background:#fff; border-radius:20px; cursor:pointer;">60 分鐘</button>
+                            </div>
+                            <input type="number" id="exDuration" name="exDuration" min="5" max="240" step="5" value="30" required style="width:100%; padding:8px; border:1px solid #ccc; border-radius:4px;" />
+                        </div>
                     </div>
                     <div>
                         <label for="exDatetime">日期與時間</label>
@@ -1207,9 +1215,14 @@
                 </div>
                 <button type="submit" style="background-color:#198754; color:white; padding:10px 16px; border:none; border-radius:6px; cursor:pointer;">新增運動</button>
             </form>
+        </div>
 
-            <!-- 過去運動紀錄（分月） -->
-            <div style="margin-top:16px; display:flex; align-items:center; gap:8px;">
+        <!-- 運動紀錄歷史（分月） -->
+        <div class="exercise-history" style="padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #ffffff; margin-top:14px;">
+            <div style="display:flex; align-items:center; justify-content: space-between;">
+                <h3 style="margin:0;">運動紀錄歷史</h3>
+            </div>
+            <div style="margin-top:12px; display:flex; align-items:center; gap:8px;">
                 <div style="font-size:13px; color:#555;">運動月份</div>
                 <select id="exMonthSelect" style="padding:6px 10px; border:1px solid #ced4da; border-radius:6px; background:#fff; color:#333; font-size:13px; cursor:pointer;"></select>
             </div>
@@ -3466,6 +3479,25 @@
                         alert('新增失敗: '+ (ret.message||''));
                     }
                 } catch(err) { console.error(err); alert('新增失敗'); }
+            });
+
+            // 初始化：日期預設現在時間、快捷時間鈕
+            const dt = document.getElementById('exDatetime');
+            if (dt) {
+                const now = new Date();
+                const yyyy = now.getFullYear();
+                const mm = String(now.getMonth()+1).padStart(2,'0');
+                const dd = String(now.getDate()).padStart(2,'0');
+                const hh = String(now.getHours()).padStart(2,'0');
+                const mi = String(now.getMinutes()).padStart(2,'0');
+                dt.value = `${yyyy}-${mm}-${dd}T${hh}:${mi}`;
+            }
+            const durInput = document.getElementById('exDuration');
+            document.querySelectorAll('.exDurBtn').forEach(btn=>{
+                btn.addEventListener('click', ()=>{
+                    const v = parseInt(btn.getAttribute('data-min'));
+                    if (!isNaN(v) && durInput) durInput.value = v;
+                });
             });
         }
 
