--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1082,9 +1082,9 @@
         <div class="weight-form-container" style="margin-bottom: 30px; padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #f9f9f9;">
             <div style="display:flex; align-items:center; justify-content: space-between;">
                 <h3 style="margin:0;">體重記錄</h3>
-                <button id="toggleWeightFormBtn" type="button" style="border:1px solid #6c757d; background:white; color:#6c757d; border-radius:6px; padding:4px 10px; cursor:pointer; font-size:12px;">隱藏</button>
+                <button id="toggleWeightFormBtn" type="button" style="border:1px solid #6c757d; background:white; color:#6c757d; border-radius:6px; padding:4px 10px; cursor:pointer; font-size:12px;">顯示</button>
             </div>
-            <div id="weightFormContent" style="margin-top:12px;">
+            <div id="weightFormContent" style="margin-top:12px; display: none;">
             <form id="weightForm">
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 15px;">
                     <div>
@@ -1165,7 +1165,7 @@
         <div class="exercise-container" style="padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #ffffff; margin-top:20px;">
             <div style="display:flex; align-items:center; justify-content: space-between;">
                 <h3 style="margin:0;">新增運動紀錄</h3>
-                <button id="toggleExerciseForm" style="background-color: #6c757d; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer; font-size: 12px;">顯示</button>
+                <button id="toggleExerciseForm" type="button" style="border:1px solid #6c757d; background:white; color:#6c757d; border-radius:6px; padding:4px 10px; cursor:pointer; font-size:12px;">顯示</button>
             </div>
 
             <!-- 運動表單：種類/強度/時間（分鐘）/日期時間 -->
@@ -1222,7 +1222,7 @@
         <div class="exercise-history" style="padding: 20px; border: 1px solid #ddd; border-radius: 8px; background-color: #ffffff; margin-top:14px;">
             <div style="display:flex; align-items:center; justify-content: space-between;">
                 <h3 style="margin:0;">運動紀錄歷史</h3>
-                <button id="toggleExerciseHistory" style="background-color: #6c757d; color: white; border: none; padding: 6px 12px; border-radius: 4px; cursor: pointer; font-size: 12px;">顯示</button>
+                <button id="toggleExerciseHistory" type="button" style="border:1px solid #6c757d; background:white; color:#6c757d; border-radius:6px; padding:4px 10px; cursor:pointer; font-size:12px;">顯示</button>
             </div>
             <div id="exerciseHistoryContent" style="display: none;">
             <div style="margin-top:12px; display:flex; align-items:center; gap:8px;">
